# audio_spec_files

./: .editorconfig  .gitignore  Makefile  readme.md
common/: Makefile.build.mk  Makefile.git.mk  Makefile.spectool.mk
docs/: juce_plugin.md
docs/plugin_template/: CMakeUserPresets.json  Makefile  new-plugin.spec
plugins/AIDA-X/: AIDA-X.spec
plugins/BYOD/: BYOD.spec  CMakeUserPresets.json  Makefile
plugins/Crypt2/: CMakeUserPresets.json  Crypt2.spec  Makefile
plugins/FRUT/: FRUT.spec  Makefile
plugins/INTERSECT/: CMakeUserPresets.json  INTERSECT.spec  Makefile
plugins/JUCE/: JUCE.spec  fix_cmake_paths.patch
plugins/JUCE7/: JUCE.spec  fix_cmake_paths.patch
plugins/JUCE8/: JUCE.spec
plugins/Loopino/: Loopino.spec  Makefile
plugins/LostAndFoundPiano/: LostAndFoundPiano.spec  Makefile
plugins/OB-Xf/: Makefile  OB-Xf.spec
plugins/Vaporizer2/: CMakeUserPresets.json  Makefile  Vaporizer2.spec
plugins/Wavetable/: CMakeUserPresets.json  Makefile  Wavetable.spec
plugins/ZLCompressor/: CMakeUserPresets.json  Makefile  ZLCompressor.spec
plugins/ZLEqualizer/: Makefile  ZLEqualizer.spec
plugins/ZLSpliter/: Makefile  ZLSplitter.spec
plugins/clap-juce-extensions/: Makefile  clap-juce-extensions.spec
plugins/dexed/: 0001-use-prebuild-juce.patch  Makefile  dexed.spec
plugins/dragonfly-reverb/: dragonfly-reverb.spec
plugins/geonkick/: geonkick.spec
plugins/jdrummer/: CMakeUserPresets.json  Makefile  jdrummer.spec
templates/cmake/: CMakeLists.txt
templates/cmake/cmake/: LinuxInstall.cmake
tools/: dep_find.py  dnf_finddep.py  new_project.py
(+25 files in other folders)
